Solve : Leetcode 2024 at 7/July

--- a/2023/july/Leet209_06.md
+++ b/2023/july/Leet209_06.md
@@ -1,5 +1,5 @@
 ## Problem
-209. Minimum Size Subarray Sum[Medium]
+209. [Medium] Minimum Size Subarray Sum
 
 Given an array of positive integers nums and a positive integer target, return the minimal length of a 
 subarray
