--- a/2023/july/Leet209_06.md
+++ b/2023/july/Leet209_06.md
@@ -40,4 +40,4 @@ class Solution {
 }
 ```
 
-![beat_result](20230706_209_beat.png)
+![beat_result](https://github.com/kwongiho/algorithm/blob/master/2023/july/leetcode_20230706_209_beat.png)
