--- a/2023/july/Leet2024_07.md
+++ b/2023/july/Leet2024_07.md
@@ -56,4 +56,4 @@ class Solution {
     }
 }
 ```
-![beat_result](./leetcode_20230707_2024_beat)
+![beat_result](https://github.com/kwongiho/algorithm/blob/master/2023/july/leetcode_20230707_2024_beat.png)
